--- a/index.html
+++ b/index.html
@@ -2,10 +2,55 @@
 <html lang="en">
   <head>
     <!-- You may want to change the site title -->
-    <title>foobar</title>
+    <title>Explore / Twitter</title>
   </head>
   <body>
-    <!-- put your content below -->
-    <h1>Hello World!</h1>
+    <section>
+     <h3> twitter </h3>
+      <a href="google.com"> updates</a> | 
+      <a href="google.com"> archive</a> |
+      <a href="google.com"> preferences</a> |
+      <a href="google.com"> help</a> |
+      <a href="google.com"> sign-out</a>
+    </section>
+
+    <div class="status">
+      <h2> what's your status?</h2>
+      <input type="text" placeholder="talk to us...">
+      <h4>current status:</h4><p>wondering what's for dinner</p>
+      <button> update </button>
+    </div>
+
+    <div class="friend-status">
+      <h3>friend's status</h3>
+      <a href="google.com"> add more friends</a>
+      <ul>
+        <li><a href="google.com">jack:</a> wondering what's for dinner <small>5 minutes ago</small></li> 
+        <li><a href="google.com">⭐jack:</a> wondering what's for dinner <small>5 minutes ago</small></li> 
+        <li><a href="google.com">⭐jack:</a> wondering what's for dinner <small>5 minutes ago</small></li> 
+        <li><a href="google.com">⭐jack:</a> wondering what's for dinner <small>5 minutes ago</small></li> 
+        <li><a href="google.com">⭐jack:</a> wondering what's for dinner <small>5 minutes ago</small></li> 
+        <li><a href="google.com">⭐jack:</a> wondering what's for dinner <small>5 minutes ago</small></li> 
+
+      </ul>
+    </div>
+
+    <div class="public status">
+      <h4>public status
+      </h4>
+        <ul>
+          <li><a href="google.com">💬jack:</a> wondering what's for dinner <small>5 minutes ago</small></li> 
+        </ul>    
+    </div>
+    
+    <div class="stats">
+      <h4> my stats
+      </h4>
+      <ul>
+        <li><a href="google.com">7 followers</a></li>
+        <li>329 pings today</li>
+      </ul>
+
+    </div>
   </body>
 </html>
